// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid [common] example testing should match snapshot(s) for GridColumns 1`] = `
<div>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-full"
    >
      <p
        style="background:#333333;color:#f3f3f3;margin:0;padding:0"
      >
        full
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-2"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        2
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-3"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        3
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-4"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        4
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-5"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        5
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-6"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        6
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-7"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        7
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-8"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        8
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-9"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        9
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-10"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        10
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-11"
    >
      <p
        style="background:#feb209;margin:0;padding:0;color:#f3f3f3"
      >
        11
      </p>
    </article>
    <article
      class="lucid-Grid-Cell"
    >
      <p
        style="background:#999999;color:#f3f3f3;margin:0;padding:0"
      >
        auto
      </p>
    </article>
  </section>
</div>
`;

exports[`Grid [common] example testing should match snapshot(s) for GutterlessGrid 1`] = `
<section
  class="lucid-Grid lucid-Grid-is-gutterless lucid-Grid-is-multiline"
>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3"
    >
      gutterless half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
    style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
  >
    gutterless quarter
  </article>
  <article
    class="lucid-Grid-Cell"
  >
    <p
      style="background:#999999;color:#f3f3f3;margin:0;padding:0"
    >
      auto
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
    >
      gutterless quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
    >
      gutterless quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3"
    >
      gutterless half
    </p>
  </article>
</section>
`;

exports[`Grid [common] example testing should match snapshot(s) for HorizontalMultilineGrid 1`] = `
<section
  class="lucid-Grid lucid-Grid-is-horizontal lucid-Grid-is-multiline"
>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-full"
  >
    <p
      style="background:#333333;color:#f3f3f3;margin:0;padding:0"
    >
      full
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
    >
      quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
    >
      quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3"
    >
      quarter
    </p>
  </article>
</section>
`;

exports[`Grid [common] example testing should match snapshot(s) for OffsetCells 1`] = `
<div>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-half lucid-Grid-Cell-is-offset-half"
    >
      <p
        style="background:#0089c4;margin:0;padding:0;color:#f3f3f3;text-align:center"
      >
        half with offset half
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter lucid-Grid-Cell-is-offset-quarter"
    >
      <p
        style="background:#f7403a;margin:0;padding:0;color:#f3f3f3;text-align:center"
      >
        quarter with offset quarter
      </p>
    </article>
  </section>
  <section
    class="lucid-Grid"
  >
    <article
      class="lucid-Grid-Cell lucid-Grid-Cell-is-third lucid-Grid-Cell-is-offset-third"
    >
      <p
        style="background:#3fa516;color:#f3f3f3;margin:0;padding:0;text-align:center"
      >
        third with offset third
      </p>
    </article>
  </section>
</div>
`;

exports[`Grid [common] example testing should match snapshot(s) for VerticalMultilineGrid 1`] = `
<section
  class="lucid-Grid lucid-Grid-is-vertical lucid-Grid-is-multiline"
  style="height:200px"
>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-half"
  >
    <p
      style="background:#0089c4;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      half
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-full"
  >
    <p
      style="background:#333333;color:#f3f3f3;margin:0;padding:0;flex:1"
    >
      full
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0;flex:1"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0;flex:1"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0;flex:1"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-third"
  >
    <p
      style="background:#3fa516;color:#f3f3f3;margin:0;padding:0;flex:1"
    >
      third
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      quarter
    </p>
  </article>
  <article
    class="lucid-Grid-Cell lucid-Grid-Cell-is-quarter"
  >
    <p
      style="background:#f7403a;margin:0;padding:0;color:#f3f3f3;flex:1"
    >
      quarter
    </p>
  </article>
</section>
`;
